--- a/kepek.html
+++ b/kepek.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>cucc</title>
+  <title>Rajzok-Filkó András hobby-grafikus</title>
 
 
     <meta charset="utf-8"> 
@@ -73,11 +73,7 @@
           <p>2017 </p>
         </div>
 
-        <div class="kartya alap">
-          <span>csendélet</span>
-          <img src="css/jcs.jpg" alt="kép leírás felolvasóknak">
-          <p>2020</p>
-        </div>
+       
 
       
 
