--- a/projektek.html
+++ b/projektek.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>cucc</title>
+  <title>Projektek-Filkó András hobby-grafikus</title>
 
 
     <meta charset="utf-8"> 
