--- a/kepek.html
+++ b/kepek.html
@@ -36,9 +36,9 @@
 <!-- MENÜSÁVe-->
     <div class="menüsáv"> Itt találod az általam (és egyes közösségi odalak, vagy versenyzsűri) által legjobbnak tartott alkotásaimat. Az érdekességek részben a kurzort a képekre irányítva megtekinthető az első két példa három év távlatából, a harmadik digitalizálás előtt és után, a negyedik pedig átrajzolás előtt és után.</div>
 
-    <div class="bal">bal</div>
+    <div class="bal"></div>
 
-    <div class="jobb">jobb</div>
+    <div class="jobb"></div>
 <!-- itt a lényeg a közepe-->
     <div class="közép">
 
