--- a/kepek.html
+++ b/kepek.html
@@ -113,7 +113,7 @@
           <p>2019 </p>
         </div>
 
-        <div class="kartya alap">
+        <div class="kartya">
           <span>Tokyo</span>
           <img src="css/tmt.jpg" alt="kép leírás felolvasóknak">
           <p>2019</p>
