--- a/kepek.html
+++ b/kepek.html
@@ -68,7 +68,7 @@
         </div>
 
           <div class="kartya alap">
-          <span>törpe</span>
+          <span>kínzókamra</span>
           <img src="css/ttc.jpg" alt="kép leírás felolvasóknak">
           <p>2017 </p>
         </div>
