--- a/kepek.html
+++ b/kepek.html
@@ -113,11 +113,7 @@
           <p>2019 </p>
         </div>
 
-        <div class="kartya">
-          <span>Tokyo</span>
-          <img src="css/tmt.jpg" alt="kép leírás felolvasóknak">
-          <p>2019</p>
-        </div>
+      
 
         <div class="kartya alap">
           <span>A könyvtáros lánya</span>
@@ -160,6 +156,12 @@
         <div class="kartya alap">
           <span>tájkép</span>
           <img src="css/kad.jpg" alt="kép leírás felolvasóknak">
+          <p>2019</p>
+        </div>
+
+        <div class="kartya alap">
+          <span>Tokyo</span>
+          <img src="css/tmt.jpg" alt="kép leírás felolvasóknak">
           <p>2019</p>
         </div>
 
