--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         	<div class="fehér">*András megváltoztatta a beszélgetés témáját</div><br><br>
 
-        	<div class="teszt1 "><b>Korábbi projektjeim:</b> Gyakran vállaltam el eddig iskolai rendezvények, például nyíltnap vagy advent kapcsán dekorációs elemek vagy szabadkézzel rajzolt plakátok elkészítését. Emellett szívességből készítettem már kissebb/nagyobb illusztrációkat olyan projektekhez, ahol fontos volt a jogtisztaság, de szükség volt valamiféle vizuális megjelenítés, például előadásokhoz, idegennyelvtani feladatokhoz. A5-ös formátumban ajándék képeslapokat (tájképeket) szívesen rajzolok.</div><br>
+        	<div class="teszt1 "><b>Korábbi projektjeim:</b> Gyakran vállaltam el eddig iskolai rendezvények, például nyíltnap vagy advent kapcsán dekorációs elemek vagy szabadkézzel rajzolt plakátok elkészítését. Emellett szívességből készítettem már kissebb/nagyobb illusztrációkat olyan projektekhez, ahol fontos volt a jogtisztaság, de szükség volt valamiféle vizuális megjelenítés, például előadásokhoz, idegennyelvi feladatokhoz. A5-ös formátumban ajándék képeslapokat (tájképeket) készítek rézkarc stílusban.</div><br>
 
         	<div class="fehér">*András megváltoztatta a beszélgetés témáját</div><br><br>
 
