--- a/tortenet.html
+++ b/tortenet.html
@@ -5,7 +5,7 @@
 
 
 		<meta charset="utf-8"> 
-		<!--ezzel ˇfelkészítem az oldalt(hehe), hogy lehet lesz öőűíés tb-->
+		<!--ezzel ˇfelkészítem az oldalt, hogy lehet lesz öőűíés tb-->
 
 		<meta name="viewport" content="widthdevice-width , inital scale=1.0">
 		<!--ezzel elvileg műkszik majd telón is-->
