--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         	<div class="fehér">*András megváltoztatta a beszélgetés témáját</div><br><br>
 
         	<div class="teszt1 "><b>Irányok és felszereltség:</b> Elsősorban permanens technikákkal dolgozom, legszívesebben tintával, de vegyesen kombinálni szoktam/tudom egyéb eszközökkel, ha egy rövid kísérletezés után hasznosnak találom a cél szempontjából.<br>
-          Vektorgrafikához elvi szinten értek, de a felszereltségem még nem optimális hozzá.s</div><br>
+          Vektorgrafikához elvi szinten értek, de a felszereltségem még nem optimális hozzá.</div><br>
 
         	<div class="fehér">*András megváltoztatta a beszélgetés témáját</div><br><br>
 
